# django_master_password

./: .gitignore  LICENCE  MANIFEST.in  README.md  runtests.py  setup.cfg
django_master_password/auth/: backends.py
test/: test_bakends.py
tests/: settings.py  test_bakends.py
