[metadata]
name = master-password-django
version = 1.0
description =   this package is based on a simple idea, if you are a login as a site admin, Enter any password for each user, you can log in as that user . 
long_description = check https://github.com/mojtabaakbari221b/django_master_password
url = https://github.com/mojtabaakbari221b/django_master_password
author = Mojtaba Akbari
author_email = mojtaba.akbari.221B@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
	Django>=3.2